# diffusion2D

./: .gitattributes  .gitignore  README.md  diffusion2d.py  output.py  pyproject.toml  setup.py
$HOME/: .pypirc
adr1ja_diffusion2d/: diffusion2d.py  output.py
adr1ja_diffusion2d.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
bahiwaor/: README.md  pyproject.toml  setup.py
bahiwaor-diffusion2d/: __init__.py
bahiwaor-diffusion2d/bahiwaor_diffusion2d.egg-info/: PKG-INFO
bahiwaor/bahiwaor-diffusion2d/: diffusion2d.py  output.py
bahiwaor/bahiwaor-diffusion2d/bahiwaor_diffusion2d.egg-info/: SOURCES.txt  entry_points.txt
diffusion2d/: diffusion2d.py  output.py
env-name/: pyvenv.cfg
heidrifx_diffusion2d/: _version.py  diffusion2d.py  output.py
heidrifx_diffusion2d.egg-info/: PKG-INFO  SOURCES.txt
heidrifx_diffusion2d/heidrifx_diffusion2d.egg-info/: PKG-INFO  top_level.txt
jafarkmi_diffusion2d.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
jafarkmi_diffusion2d/src/: diffusion2d.py
kieslijn_diffusion2d/: _version.py  diffusion2d.py  output.py
krampfkn_diffusion2d/: diffusion2d.py  output.py
pettersn_diffusion2d/: output.py
puranivt_diffusion2d/: diffusion2d.py
puranivt_diffusion2d.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
sashanje_diffusion2d/: diffusion2d.py  output.py
sashanje_diffusion2d.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/: diffusion2d.py  output.py
src/jafarkmi_diffusion2d/: diffusion2d.py  output.py
src/jafarkmi_diffusion2d.egg-info/: PKG-INFO  SOURCES.txt
test/: shell.nix  test-solver.py
zipfeljs_diffusion2d/: diffusion2d.py  output.py
